--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,21 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.22'
+        go-version: '1.22.1'
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+    - name: Coverage
+      run: go test -coverprofile=coverage.txt
+
+
+
+
+    - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
