--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,13 +23,12 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
     - name: Test
-      run: go test -v ./...
-
+      run: go test -v -race ./...
+    - name: Benchmark
+      run: go test -race -run=^$ -bench=. -benchmem ./...
     - name: Coverage
       run: go test -coverprofile=coverage.txt
-
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
